--- a/app/wait/display.html
+++ b/app/wait/display.html
@@ -135,7 +135,7 @@
       <!-- QRコードと案内 -->
       <div class="qr-section">
         <p>受付はこのQRコードをお読みください</p>
-        <iframe src="/QR/waitQR.png" class="qr-iframe"></iframe>
+        <iframe src="/QR/QRwait.png" class="qr-iframe"></iframe>
       </div>
     </div>
   </main>
