--- a/app/wait/wait.html
+++ b/app/wait/wait.html
@@ -247,8 +247,8 @@
         document.getElementById("estimatedTime").innerHTML = `
           約${estimated}分<br>
           <div style="margin-top: 10px; font-size: 14px; color: #c0392b;">
-            <br>※5分以内に来店しない場合、自動キャンセルされます<br>
-            <span style="font-size:13px;">*Your spot will be automatically cancelled if you don't arrive within 5 minutes.</span>
+            <br>※5分以内に来店しない場合、キャンセルされます<br>
+            <span style="font-size:13px;">*Your spot will be cancelled if you don't arrive within 5 minutes.</span>
           </div>
         `;
       });
