--- a/practice.html
+++ b/practice.html
@@ -8,6 +8,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
+
   <style>
     body {
       font-family: 'Helvetica Neue', sans-serif;
@@ -15,72 +16,152 @@
       padding: 0;
       background: linear-gradient(to right, #a1c4fd, #c2e9fb);
       color: #2c3e50;
+      overflow-x: hidden;
     }
+
     header {
       background-color: #2c3e50;
       color: white;
     }
+
     .header-bar {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 12px 20px;
     }
+
     .header-title {
       font-size: 1.5em;
       font-weight: bold;
     }
+
+    .header-links {
+      display: flex;
+      gap: 20px;
+    }
+
     .header-links a {
       color: white;
       text-decoration: none;
       font-weight: 500;
-      margin-left: 20px;
     }
-    main {
-      max-width: 600px;
-      margin: 30px auto;
-      padding: 20px;
-      background: #fff;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+
+    .header-links a:hover {
+      text-decoration: underline;
     }
-    label, select {
-      font-size: 1.2em;
+
+    .menu-button {
+      position: absolute;
+      left: 20px;
+      top: 12px;
+      width: 30px;
+      height: 24px;
+      cursor: pointer;
+      z-index: 1001;
+    }
+
+    .menu-button span {
       display: block;
+      height: 4px;
+      background: white;
+      margin: 5px 0;
+      transition: 0.4s;
+    }
+
+    .drawer {
+      position: fixed;
+      top: 0;
+      left: -250px;
+      width: 250px;
+      height: 100%;
+      background-color: #34495e;
+      color: white;
+      transition: 0.3s;
+      z-index: 1000;
+      padding-top: 60px;
+    }
+
+    .drawer.open {
+      left: 0;
+    }
+
+    .drawer a {
+      display: block;
+      padding: 15px 20px;
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+      border-bottom: 1px solid #2c3e50;
+    }
+
+    .drawer a:hover {
+      background-color: #2c3e50;
+    }
+
+    main {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 30px 20px;
+    }
+
+    h2 {
+      margin-top: 40px;
       margin-bottom: 10px;
+      border-bottom: 2px solid #2c3e50;
+      padding-bottom: 5px;
     }
-    select {
-      padding: 8px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
+
+    label, select, button {
+      font-size: 1.1em;
+      margin: 10px;
     }
+
     button {
-      font-size: 1em;
-      padding: 10px 20px;
-      margin: 10px 8px 10px 0;
+      padding: 8px 16px;
       border: none;
       border-radius: 6px;
       background-color: #3498db;
       color: white;
       cursor: pointer;
     }
+
+    button:hover {
+      background-color: #2980b9;
+    }
+
     #printArea {
-      margin-top: 20px;
+      width: 58mm;
+      text-align: center;
+      font-family: sans-serif;
+      margin: auto;
+      padding: 5mm;
+      border: 1px dashed #ccc;
+      background: white;
+    }
+
+    #printArea canvas {
+      width: 100%;
+      height: auto;
+    }
+
+    #historyList {
+      margin-top: 40px;
       padding: 10px;
       background-color: #f8f9fa;
-      border: 2px dashed #aaa;
       border-radius: 8px;
-      text-align: center;
     }
-    #history {
-      margin-top: 30px;
-      padding-top: 20px;
-      border-top: 1px solid #ccc;
-    }
-    .history-item {
-      margin: 10px 0;
+
+    @media print {
+      body * {
+        visibility: hidden;
+      }
+      #printArea, #printArea * {
+        visibility: visible;
+      }
     }
   </style>
+
   <script>
     const firebaseConfig = {
       apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
@@ -90,6 +171,7 @@
       messagingSenderId: "304250341939",
       appId: "1:304250341939:web:b8d5b946590d1f852cf146"
     };
+
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
@@ -101,74 +183,109 @@
         alert("テーブル番号を入力してください");
         return;
       }
+
       const token = crypto.randomUUID();
-      const expiresAt = new Date(Date.now() + 24 * 60 * 60 * 1000);
+      const expiresAt = new Date(Date.now() + 24 * 60 * 60 * 1000); // 1日後
+      const timestamp = new Date();
+
       await db.collection("qr_tokens").doc(token).set({
         table: table,
         token: token,
         expiresAt: expiresAt.toISOString(),
-        used: false
+        used: false,
+        createdAt: timestamp.toISOString()
       });
+
       const url = `https://qr-webpage.vercel.app/app/register/enter.html?table=${table}&token=${token}`;
       document.getElementById("tableLabel").textContent = `テーブル番号：${table}`;
-      document.getElementById("expiresInfo").textContent = `有効期限：${expiresAt.toLocaleString("ja-JP")}`;
-      QRCode.toCanvas(document.getElementById("qrcode"), url);
-      lastGenerated = { table, token, time: new Date().toLocaleString("ja-JP") };
-      addToHistory(lastGenerated);
+      QRCode.toCanvas(document.getElementById("qrcode"), url, function (error) {
+        if (error) {
+          console.error(error);
+          alert("QRコード生成に失敗しました");
+        }
+      });
+
+      lastGenerated = { table, url, timestamp };
+
+      updateHistoryDisplay();
     }
 
     function regenerateQR() {
       if (!lastGenerated) {
-        alert("再生成するQRコードがありません");
+        alert("QRコードがまだ生成されていません");
         return;
       }
-      const url = `https://qr-webpage.vercel.app/app/register/enter.html?table=${lastGenerated.table}&token=${lastGenerated.token}`;
       document.getElementById("tableLabel").textContent = `テーブル番号：${lastGenerated.table}`;
-      document.getElementById("expiresInfo").textContent = `※再生成 QRコード`;
-      QRCode.toCanvas(document.getElementById("qrcode"), url);
+      QRCode.toCanvas(document.getElementById("qrcode"), lastGenerated.url, function (error) {
+        if (error) {
+          console.error(error);
+          alert("再表示に失敗しました");
+        }
+      });
     }
 
-    function addToHistory(item) {
+    function updateHistoryDisplay() {
       const container = document.getElementById("historyList");
-      const div = document.createElement("div");
-      div.className = "history-item";
-      div.textContent = `テーブル ${item.table} - ${item.time}`;
-      container.prepend(div);
+      const historyItem = document.createElement("div");
+      historyItem.innerHTML = `<strong>テーブル ${lastGenerated.table}</strong> - ${lastGenerated.timestamp.toLocaleString()}`;
+      container.prepend(historyItem);
     }
+
+    window.onload = () => {
+      const menuButton = document.querySelector(".menu-button");
+      const drawer = document.querySelector(".drawer");
+      menuButton.addEventListener("click", () => {
+        drawer.classList.toggle("open");
+      });
+    };
   </script>
 </head>
 <body>
+
   <header>
+    <div class="menu-button">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
     <div class="header-bar">
-      <div class="header-title">店内管理システム</div>
+      <div class="header-title">　　　　　店内管理システム</div>
       <div class="header-links">
         <a href="index.html">ログアウト</a>
       </div>
     </div>
+    <div class="drawer">
+      <a href="dashboard.html">ホーム</a>
+      <a href="table.html">テーブル管理</a>
+      <a href="histogram.html">混雑状況可視化</a>
+      <a href="admin.html">順番待ち管理</a>
+      <a href="/QR/qrcode.html">QRコード一覧</a>
+      <a href="generate.html">QRコード生成</a>
+    </div>
   </header>
 
-  <main>
-    <h2>QRコード生成（ワンタイム）</h2>
-    <label>テーブル番号:
-      <select id="tableNum">
-        <option value="">選択してください</option>
-        ${[...Array(14)].map((_, i) => `<option value="${i + 1}">テーブル ${i + 1}</option>`).join('')}
-      </select>
-    </label>
-    <button onclick="generateQR()">生成</button>
-    <button onclick="regenerateQR()">再表示</button>
-    <button onclick="window.print()">印刷する</button>
+<main>
+  <h2>QRコード生成（ワンタイム）</h2>
+  <label>テーブル番号:
+    <select id="tableNum">
+      <option value="">選択してください</option>
+      ${[...Array(14)].map((_, i) => `<option value="${i+1}">テーブル ${i+1}</option>`).join('')}
+    </select>
+  </label><br>
+  <button onclick="generateQR()">生成</button>
+  <button onclick="regenerateQR()">再表示</button>
+  <button onclick="window.print()">印刷する</button>
 
-    <div id="printArea">
-      <p id="tableLabel">テーブル番号：</p>
-      <p id="expiresInfo"></p>
-      <canvas id="qrcode"></canvas>
-    </div>
+  <div id="printArea">
+    <p id="tableLabel">テーブル番号：</p>
+    <canvas id="qrcode"></canvas>
+  </div>
 
-    <div id="history">
-      <h3>QRコード履歴（直近）</h3>
-      <div id="historyList"></div>
-    </div>
-  </main>
+  <div id="historyList">
+    <h3>生成履歴</h3>
+  </div>
+</main>
+
 </body>
 </html>
+
