--- a/practice.html
+++ b/practice.html
@@ -269,7 +269,7 @@
   <label>テーブル番号:
     <select id="tableNum">
       <option value="">選択してください</option>
-      ${[...Array(14)].map((_, i) => `<option value="${i+1}">テーブル ${i+1}</option>`).join('')}
+      ${[...Array(14)].map((_, i) => `<option value="$14">テーブル ${i+1}</option>`).join('')}
     </select>
   </label><br>
   <button onclick="generateQR()">生成</button>
