--- a/practice.html
+++ b/practice.html
@@ -16,7 +16,6 @@
       padding: 0;
       background: linear-gradient(to right, #a1c4fd, #c2e9fb);
       color: #2c3e50;
-      overflow-x: hidden;
     }
 
     header {
@@ -107,7 +106,6 @@
 
     h2 {
       margin-top: 40px;
-      margin-bottom: 10px;
       border-bottom: 2px solid #2c3e50;
       padding-bottom: 5px;
     }
@@ -134,7 +132,7 @@
       width: 58mm;
       text-align: center;
       font-family: sans-serif;
-      margin: auto;
+      margin: 20px auto;
       padding: 5mm;
       border: 1px dashed #ccc;
       background: white;
@@ -150,6 +148,14 @@
       padding: 10px;
       background-color: #f8f9fa;
       border-radius: 8px;
+    }
+
+    .history-item {
+      padding: 8px 12px;
+      margin: 6px 0;
+      background-color: white;
+      border-radius: 6px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
     }
 
     @media print {
@@ -171,7 +177,6 @@
       messagingSenderId: "304250341939",
       appId: "1:304250341939:web:b8d5b946590d1f852cf146"
     };
-
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
@@ -180,17 +185,16 @@
     async function generateQR() {
       const table = document.getElementById("tableNum").value;
       if (!table || isNaN(table)) {
-        alert("テーブル番号を入力してください");
+        alert("テーブル番号を選択してください");
         return;
       }
 
       const token = crypto.randomUUID();
-      const expiresAt = new Date(Date.now() + 24 * 60 * 60 * 1000); // 1日後
+      const expiresAt = new Date(Date.now() + 24 * 60 * 60 * 1000);
       const timestamp = new Date();
 
       await db.collection("qr_tokens").doc(token).set({
-        table: table,
-        token: token,
+        table, token,
         expiresAt: expiresAt.toISOString(),
         used: false,
         createdAt: timestamp.toISOString()
@@ -198,25 +202,21 @@
 
       const url = `https://qr-webpage.vercel.app/app/register/enter.html?table=${table}&token=${token}`;
       document.getElementById("tableLabel").textContent = `テーブル番号：${table}`;
-      QRCode.toCanvas(document.getElementById("qrcode"), url, function (error) {
+      QRCode.toCanvas(document.getElementById("qrcode"), url, error => {
         if (error) {
           console.error(error);
           alert("QRコード生成に失敗しました");
         }
       });
 
-      lastGenerated = { table, url, timestamp };
-
+      lastGenerated = { table, url, timestamp: timestamp.toISOString() };
       updateHistoryDisplay();
     }
 
     function regenerateQR() {
-      if (!lastGenerated) {
-        alert("QRコードがまだ生成されていません");
-        return;
-      }
+      if (!lastGenerated) return alert("まだQRコードを生成していません");
       document.getElementById("tableLabel").textContent = `テーブル番号：${lastGenerated.table}`;
-      QRCode.toCanvas(document.getElementById("qrcode"), lastGenerated.url, function (error) {
+      QRCode.toCanvas(document.getElementById("qrcode"), lastGenerated.url, error => {
         if (error) {
           console.error(error);
           alert("再表示に失敗しました");
@@ -225,66 +225,73 @@
     }
 
     function updateHistoryDisplay() {
-      const container = document.getElementById("historyList");
-      const historyItem = document.createElement("div");
-      historyItem.innerHTML = `<strong>テーブル ${lastGenerated.table}</strong> - ${lastGenerated.timestamp.toLocaleString()}`;
-      container.prepend(historyItem);
+      const container = document.getElementById("historyContainer");
+      const item = document.createElement("div");
+      const dateStr = new Date(lastGenerated.timestamp).toLocaleString();
+      item.className = "history-item";
+      item.innerHTML = `<strong>テーブル ${lastGenerated.table}</strong> - ${dateStr}`;
+      container.appendChild(item);
+    }
+
+    function downloadQR() {
+      const canvas = document.getElementById("qrcode");
+      const link = document.createElement("a");
+      link.download = "qr_code.png";
+      link.href = canvas.toDataURL();
+      link.click();
     }
 
     window.onload = () => {
-  // メニュー動作
-  const menuButton = document.querySelector(".menu-button");
-  const drawer = document.querySelector(".drawer");
-  menuButton.addEventListener("click", () => {
-    drawer.classList.toggle("open");
-  });
+      const menuButton = document.querySelector(".menu-button");
+      const drawer = document.querySelector(".drawer");
+      menuButton.addEventListener("click", () => {
+        drawer.classList.toggle("open");
+      });
 
-  // テーブル番号の選択肢を動的に追加（1～14）
-  const tableSelect = document.getElementById("tableNum");
-  for (let i = 1; i <= 14; i++) {
-    const option = document.createElement("option");
-    option.value = i;
-    option.textContent = `テーブル ${i}`;
-    tableSelect.appendChild(option);
-  }
-};
+      const tableSelect = document.getElementById("tableNum");
+      for (let i = 1; i <= 14; i++) {
+        const option = document.createElement("option");
+        option.value = i;
+        option.textContent = `テーブル ${i}`;
+        tableSelect.appendChild(option);
+      }
+    };
   </script>
 </head>
 <body>
 
-  <header>
-    <div class="menu-button">
-      <span></span>
-      <span></span>
-      <span></span>
+<header>
+  <div class="menu-button">
+    <span></span><span></span><span></span>
+  </div>
+  <div class="header-bar">
+    <div class="header-title">　　　　　店内管理システム</div>
+    <div class="header-links">
+      <a href="index.html">ログアウト</a>
     </div>
-    <div class="header-bar">
-      <div class="header-title">　　　　　店内管理システム</div>
-      <div class="header-links">
-        <a href="index.html">ログアウト</a>
-      </div>
-    </div>
-    <div class="drawer">
-      <a href="dashboard.html">ホーム</a>
-      <a href="table.html">テーブル管理</a>
-      <a href="histogram.html">混雑状況可視化</a>
-      <a href="admin.html">順番待ち管理</a>
-      <a href="/QR/qrcode.html">QRコード一覧</a>
-      <a href="generate.html">QRコード生成</a>
-    </div>
-  </header>
+  </div>
+  <div class="drawer">
+    <a href="dashboard.html">ホーム</a>
+    <a href="table.html">テーブル管理</a>
+    <a href="histogram.html">混雑状況可視化</a>
+    <a href="admin.html">順番待ち管理</a>
+    <a href="/QR/qrcode.html">QRコード一覧</a>
+    <a href="generate.html">QRコード生成</a>
+  </div>
+</header>
 
 <main>
   <h2>QRコード生成（ワンタイム）</h2>
   <label>テーブル番号:
     <select id="tableNum">
       <option value="">選択してください</option>
-      ${[...Array(14)].map((_, i) => `<option value="${i + 1}">テーブル ${i + 1}</option>`).join('')}
     </select>
   </label><br>
+
   <button onclick="generateQR()">生成</button>
   <button onclick="regenerateQR()">再表示</button>
-  <button onclick="window.print()">印刷する</button>
+  <button onclick="downloadQR()">画像ダウンロード</button>
+  <button onclick="window.print()">印刷</button>
 
   <div id="printArea">
     <p id="tableLabel">テーブル番号：</p>
@@ -293,9 +300,9 @@
 
   <div id="historyList">
     <h3>生成履歴</h3>
+    <div id="historyContainer"></div>
   </div>
 </main>
 
 </body>
 </html>
-
