--- a/app/system/generate.html
+++ b/app/system/generate.html
@@ -1,106 +1,325 @@
-<!-- 今回の修正・追加点を考慮したgenerate.html の再修正版です -->
-<!-- ポイント：
-1. QRコードの表示エリアを固定サイズにして高さが変わらないように
-2. 有効期限切れQRはグレーアウト
-3. 送信機能を追加（Firestore に QR 情報を書き込み）
-4. 各テーブル端末用の receiver.html を別ファイルで作成（後述）
--->
 <!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>QRコード生成と送信</title>
+  <title>QRコード生成と印刷</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
+
   <style>
-    body { font-family: sans-serif; margin: 0; background: #c2e9fb; }
-    main { max-width: 1000px; margin: 20px auto; padding: 20px; }
-    #contentWrap { display: flex; gap: 30px; flex-wrap: wrap; align-items: flex-start; }
-    #printArea { width: 58mm; height: 80mm; border: 1px dashed #ccc; background: white; padding: 5mm; text-align: center; }
-    #printArea canvas { width: 100%; height: auto; }
-    #historyList { max-height: 300px; overflow-y: auto; background: #f8f9fa; padding: 10px; border-radius: 8px; }
-    .history-item { padding: 6px; border-bottom: 1px solid #ccc; cursor: pointer; }
-    .history-item:hover { background: #e0e0e0; }
-    .expired { background-color: #ddd !important; color: #999; }
+    body {
+      font-family: 'Helvetica Neue', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
+      color: #2c3e50;
+      overflow-x: hidden;
+    }
+
+    header {
+      background-color: #2c3e50;
+      color: white;
+    }
+
+    .header-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 12px 20px;
+    }
+
+    .header-title {
+      font-size: 1.5em;
+      font-weight: bold;
+    }
+
+    .header-links {
+      display: flex;
+      gap: 20px;
+    }
+
+    .header-links a {
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .menu-button {
+      position: absolute;
+      left: 20px;
+      top: 12px;
+      width: 30px;
+      height: 24px;
+      cursor: pointer;
+      z-index: 1001;
+    }
+
+    .menu-button span {
+      display: block;
+      height: 4px;
+      background: white;
+      margin: 5px 0;
+      transition: 0.4s;
+    }
+
+    .drawer {
+      position: fixed;
+      top: 0;
+      left: -250px;
+      width: 250px;
+      height: 100%;
+      background-color: #34495e;
+      color: white;
+      transition: 0.3s;
+      z-index: 1000;
+      padding-top: 60px;
+    }
+
+    .drawer.open {
+      left: 0;
+    }
+
+    .drawer a {
+      display: block;
+      padding: 15px 20px;
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+      border-bottom: 1px solid #2c3e50;
+    }
+
+    main {
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 30px 20px;
+    }
+
+    h2 {
+      margin-top: 40px;
+      margin-bottom: 10px;
+      border-bottom: 2px solid #2c3e50;
+      padding-bottom: 5px;
+    }
+
+    label, select, button {
+      font-size: 1.1em;
+      margin: 10px;
+    }
+
+    button {
+      padding: 8px 16px;
+      border: none;
+      border-radius: 6px;
+      background-color: #3498db;
+      color: white;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #2980b9;
+    }
+
+    #contentWrap {
+      display: flex;
+      gap: 30px;
+      flex-wrap: wrap;
+    }
+
+    #printArea {
+      width: 58mm;
+      height: 90mm; /* 高さ固定 */
+      text-align: center;
+      font-family: sans-serif;
+      padding: 5mm;
+      border: 1px dashed #ccc;
+      background: white;
+      box-sizing: border-box;
+    }
+
+    #printArea canvas {
+      width: 100%;
+      height: auto;
+    }
+
+    #historyWrap {
+      flex: 1;
+      min-width: 300px;
+    }
+
+    #historyList {
+      margin-top: 10px;
+      background-color: #f8f9fa;
+      border-radius: 8px;
+      padding: 10px;
+      max-height: 300px;
+      overflow-y: auto;
+    }
+
+    .history-item {
+      padding: 8px;
+      border-bottom: 1px solid #ccc;
+      cursor: pointer;
+    }
+
+    .history-item.expired {
+      background-color: #e0e0e0;
+      color: #888;
+    }
+
+    .history-item:hover {
+      background-color: #d0e7ff;
+    }
+
+    @media print {
+      body * {
+        visibility: hidden;
+      }
+      #printArea, #printArea * {
+        visibility: visible;
+      }
+    }
   </style>
-</head>
-<body>
-  <main>
-    <h2>QRコード生成と送信</h2>
-    <label>テーブル番号: <select id="tableNum"><option value="">選択してください</option></select></label>
-    <button onclick="generateAndSendQR()">生成して送信</button>
-    <div id="contentWrap">
-      <div id="printArea">
-        <p id="tableLabel">テーブル番号：</p>
-        <canvas id="qrcode"></canvas>
-      </div>
-      <div>
-        <h3>生成履歴（最新10件）</h3>
-        <div id="historyList"></div>
-      </div>
-    </div>
-  </main>
+
   <script>
-    const firebaseConfig = { /* ...省略。前の設定と同様... */ };
+    const firebaseConfig = {
+      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+      authDomain: "qr-visitor-log.firebaseapp.com",
+      projectId: "qr-visitor-log",
+      storageBucket: "qr-visitor-log.appspot.com",
+      messagingSenderId: "304250341939",
+      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+    };
+
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
+
     const historyItems = [];
 
-    async function generateAndSendQR() {
+    async function generateQR() {
       const table = document.getElementById("tableNum").value;
-      if (!table || isNaN(table)) return alert("テーブル番号を選択してください");
+      if (!table || isNaN(table)) {
+        alert("テーブル番号を入力してください");
+        return;
+      }
+
       const token = crypto.randomUUID();
-      const now = new Date();
-      const expiresAt = new Date(now.getTime() + 24 * 60 * 60 * 1000);
+      const expiresAt = new Date(Date.now() + 24 * 60 * 60 * 1000);
+      const timestamp = new Date();
       const url = `https://qr-webpage.vercel.app/app/register/enter.html?table=${table}&token=${token}`;
 
       await db.collection("qr_tokens").doc(token).set({
-        table, token, expiresAt: expiresAt.toISOString(), used: false, createdAt: now.toISOString()
+        table: table,
+        token: token,
+        expiresAt: expiresAt.toISOString(),
+        used: false,
+        createdAt: timestamp.toISOString()
       });
 
-      // QRコードをFirestoreに送信（テーブルごとに最新状態を保存）
-      await db.collection("table_displays").doc(`table_${table}`).set({
-        url, table, token, expiresAt: expiresAt.toISOString(), sentAt: now.toISOString()
-      });
-
-      const entry = { table, url, timestamp: now, expiresAt };
+      const entry = { table, url, timestamp, expiresAt };
       renderQRCode(entry);
       updateHistory(entry);
     }
 
     function renderQRCode(entry) {
       document.getElementById("tableLabel").textContent = `テーブル番号：${entry.table}`;
-      QRCode.toCanvas(document.getElementById("qrcode"), entry.url);
+      QRCode.toCanvas(document.getElementById("qrcode"), entry.url, function (error) {
+        if (error) {
+          console.error(error);
+          alert("QRコード表示に失敗しました");
+        }
+      });
     }
 
     function updateHistory(entry) {
       historyItems.unshift(entry);
-      if (historyItems.length > 10) historyItems.pop();
-      const list = document.getElementById("historyList");
-      list.innerHTML = "";
-      historyItems.forEach(item => {
+      if (historyItems.length > 10) {
+        historyItems.pop();
+      }
+
+      const container = document.getElementById("historyList");
+      container.innerHTML = "";
+      const now = new Date();
+
+      historyItems.forEach((item) => {
+        const isExpired = new Date(item.expiresAt) < now;
         const div = document.createElement("div");
-        div.className = "history-item";
-        const expired = new Date(item.expiresAt) < new Date();
-        if (expired) div.classList.add("expired");
-        div.innerHTML = `<strong>テーブル ${item.table}</strong><br>発行: ${item.timestamp.toLocaleString()}<br>有効期限: ${new Date(item.expiresAt).toLocaleString()}`;
+        div.className = "history-item" + (isExpired ? " expired" : "");
+        div.innerHTML = `
+          <strong>テーブル ${item.table}</strong><br>
+          発行: ${item.timestamp.toLocaleString()}<br>
+          有効期限: ${new Date(item.expiresAt).toLocaleString()}
+        `;
         div.onclick = () => renderQRCode(item);
-        list.appendChild(div);
+        container.appendChild(div);
       });
     }
 
     window.onload = () => {
-      const sel = document.getElementById("tableNum");
+      const menuButton = document.querySelector(".menu-button");
+      const drawer = document.querySelector(".drawer");
+      menuButton.addEventListener("click", () => {
+        drawer.classList.toggle("open");
+      });
+
+      const tableSelect = document.getElementById("tableNum");
       for (let i = 1; i <= 14; i++) {
-        const opt = document.createElement("option");
-        opt.value = i;
-        opt.textContent = `テーブル ${i}`;
-        sel.appendChild(opt);
+        const option = document.createElement("option");
+        option.value = i;
+        option.textContent = `テーブル ${i}`;
+        tableSelect.appendChild(option);
       }
     };
   </script>
+</head>
+<body>
+
+  <header>
+    <div class="menu-button">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <div class="header-bar">
+      <div class="header-title">　　　　　店内管理システム</div>
+      <div class="header-links">
+        <a href="index.html">ログアウト</a>
+      </div>
+    </div>
+    <div class="drawer">
+      <a href="dashboard.html">ホーム</a>
+      <a href="table.html">テーブル管理</a>
+      <a href="histogram.html">混雑状況可視化</a>
+      <a href="admin.html">順番待ち管理</a>
+      <a href="/QR/qrcode.html">QRコード一覧</a>
+      <a href="generate.html">QRコード生成</a>
+    </div>
+  </header>
+
+<main>
+  <h2>QRコード生成（ワンタイム）</h2>
+  <label>テーブル番号:
+    <select id="tableNum">
+      <option value="">選択してください</option>
+    </select>
+  </label>
+  <button onclick="generateQR()">生成</button>
+  <button onclick="window.print()">印刷する</button>
+
+  <div id="contentWrap">
+    <div id="printArea">
+      <p id="tableLabel">テーブル番号：</p>
+      <canvas id="qrcode"></canvas>
+    </div>
+
+    <div id="historyWrap">
+      <h3>生成履歴（最大10件）</h3>
+      <div id="historyList"></div>
+    </div>
+  </div>
+</main>
+
 </body>
 </html>
